# mle-pcs

./: .gitignore  CONTRIBUTING.md  README.md  batch-export.py  batch-export.sh  export-pdf.sh  final-report.md  gen_index.py  index.html  style.css  test_all.sh  typora-export-pdf.applescript  update-gh-pages.sh
.github/: pull_request_template.md
analysis/: basefold-analysis.md  basefold-analysis.zh.md  basefold-deepfold-whir.zh.md  gemini-analysis.md  gemini-analysis.zh.md  ph23-analysis.md  ph23-analysis.zh.md  zeromorph-anlysis.md  zeromorph-anlysis.zh.md  zeromorph-fri-analysis.md  zeromorph-fri-analysis.zh.md
basefold/: basefold-01.md  basefold-01.zh.md  basefold-02.md  basefold-02.zh.md  (+13 more)
basefold-deepfold-whir/: basefold-deepfold-whir.md
src/: Basefold.ipynb  Basefold.py  README.md  basefold_pcs.py  basefold_pcs_partial.py  basefold_rs_opt_pcs.py  basefold_rs_pcs.py  batch_fri.py  bcho_pcs.ipynb  bcho_pcs.py  circle.ipynb  circle.py  circle_fft.ipynb  curve.py  deepfold.ipynb  deepfold_pcs.py  dp23_pcs.py  field.py  fri.py  fri_babybear.py  group.py  hyperkzg_pcs.py  hyrax_pcs.py  ipa.py  kzg10.ipynb  kzg10.py  kzg10_hiding_m.py  kzg10_hiding_z.py  kzg10_non_hiding.py  kzg10_non_hiding2.py  kzg_hiding.py  libra_pcs.py  ligerito.ipynb  ligerito_pcs.py  mercury_pcs.ipynb  mercury_pcs.py  merkle.py  mle.py  mle2.py  mle2_test.py  (+16 more)
src/ff/: babybear.py  goldilocks.py  koalabear.py  tiny.py
src/finite-field/: babybear.py  mersenne31.py
src/merlin/: merlin_transcript.py
zeromorph/implementation/: Cargo.toml
zeromorph/implementation/src/: main.rs
(+131 files in other folders)
