[tool.poetry]
name = "pymlepcs"
version = "0.1.0"
description = ""
authors = ["Yu Guo <yu.guo@secbit.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-ecc = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
