[package]
name = "implementation"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-poly = "0.5.0"
ark-serialize = "0.5.0"
ark-relations = "0.5.0"  # Possibly needed if you do some circuit-based stuff
rand = "0.8"
merlin = "3.0"